# valorant-match-data

./: .gitignore  README.md  pyproject.toml
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
src/etl/extract/: Dockerfile
src/etl/transform/: Dockerfile  transform.py
src/ingestion/: main.py
src/transformation/: main.py  pyproject.toml
src/visualisation/: main.py  pyproject.toml
