[tool.poetry]
name = "valorant-accuracy-tracker"
version = "0.1.0"
description = ""
authors = ["Jack White <jfw793@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
boto3 = "^1.28.40"
requests = "^2.31.0"
pandas = "^2.1.0"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
